salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Phone_Carrier__c</fullName>
    <description>Name of the phone carrier/provider</description>
    <label>Phone Carrier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>