salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Data_Breach__c.field-meta.xml
<CustomField>
    <fullName>Phone_Data_Breach__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this number appeared in known data breaches?</description>
    <label>Phone Data Breach</label>
    <type>Checkbox</type>
</CustomField>