salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_DNC_Status__c.field-meta.xml
<CustomField>
    <fullName>Phone_DNC_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>⚠️ CRITICAL: Is number on Do Not Call Registry? ($500-$1500 fine per violation)</description>
    <inlineHelpText>⚠️ DO NOT CALL if checked. Legal violation: $500-$1500 per call</inlineHelpText>
    <label>Phone DNC Status</label>
    <type>Checkbox</type>
</CustomField>