salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Fraud_Score__c.field-meta.xml
<CustomField>
    <fullName>Phone_Fraud_Score__c</fullName>
    <description>Fraud risk score from 0-100 (higher = riskier)</description>
    <label>Phone Fraud Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>