salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Legal_Risk__c.field-meta.xml
<CustomField>
    <fullName>Phone_Legal_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>⚠️ Does this number have ANY legal compliance issues? (DNC or TCPA)</description>
    <inlineHelpText>⚠️ Review DNC Status and TCPA Blacklist before calling</inlineHelpText>
    <label>Phone Legal Risk</label>
    <type>Checkbox</type>
</CustomField>