salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Phone_Line_Status__c</fullName>
    <description>Current status of the phone line (active/inactive)</description>
    <label>Phone Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
            </value>
            <value>
                <fullName>inactive</fullName>
            </value>
            <value>
                <fullName>unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>