salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Line_Type__c</fullName>
    <description>Type of phone line (mobile, landline, VoIP)</description>
    <label>Phone Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mobile</fullName>
            </value>
            <value>
                <fullName>landline</fullName>
            </value>
            <value>
                <fullName>voip</fullName>
            </value>
            <value>
                <fullName>unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>