salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Location__c.field-meta.xml
<CustomField>
    <fullName>Phone_Location__c</fullName>
    <description>Location associated with phone number (City, State, ZIP)</description>
    <label>Phone Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>