salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Phone_Owner_Name__c</fullName>
    <description>Name of the phone number owner or associated business</description>
    <label>Phone Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>