salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Phone_Prepaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a prepaid phone line?</description>
    <label>Phone Prepaid</label>
    <type>Checkbox</type>
</CustomField>