salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Phone_Reassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this number recently reassigned to a new owner?</description>
    <inlineHelpText>Calling reassigned numbers can violate TCPA</inlineHelpText>
    <label>Phone Reassigned</label>
    <type>Checkbox</type>
</CustomField>