salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Recent_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Phone_Recent_Abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this number been used for recent abusive behavior?</description>
    <label>Phone Recent Abuse</label>
    <type>Checkbox</type>
</CustomField>