salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Phone_Recommendation__c</fullName>
    <description>Recommended action based on phone validation data</description>
    <label>Phone Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Contact - Legal Risk</fullName>
            </value>
            <value>
                <fullName>Do Not Contact - Invalid/Inactive</fullName>
            </value>
            <value>
                <fullName>Do Not Contact - High Fraud</fullName>
            </value>
            <value>
                <fullName>Do Not Contact - Spammer</fullName>
            </value>
            <value>
                <fullName>Proceed with Caution - VoIP/Landline</fullName>
            </value>
            <value>
                <fullName>Proceed with Caution - Prepaid</fullName>
            </value>
            <value>
                <fullName>Proceed with Caution - Moderate Fraud</fullName>
            </value>
            <value>
                <fullName>Proceed with Caution - Data Breach</fullName>
            </value>
            <value>
                <fullName>Good to Contact</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
                <default>true</default>
                <label>Review Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>