salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Spammer__c.field-meta.xml
<CustomField>
    <fullName>Phone_Spammer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this number flagged as a known spammer?</description>
    <label>Phone Spammer</label>
    <type>Checkbox</type>
</CustomField>