salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_TCPA_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Phone_TCPA_Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>⚠️ CRITICAL: Is number on TCPA litigation blacklist?</description>
    <inlineHelpText>⚠️ DO NOT CALL if checked. High risk of lawsuit</inlineHelpText>
    <label>Phone TCPA Blacklist</label>
    <type>Checkbox</type>
</CustomField>