salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Phone_Timezone__c</fullName>
    <description>Timezone of the phone number location (e.g., America/New_York)</description>
    <label>Phone Timezone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>