salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Valid__c.field-meta.xml
<CustomField>
    <fullName>Phone_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the phone number is valid and formatted correctly</description>
    <label>Phone Valid</label>
    <type>Checkbox</type>
</CustomField>