salesforce-edition/salesforce-metadata/objects/Lead/fields/Phone_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_Validation_Date__c</fullName>
    <description>When was the phone number last validated?</description>
    <label>Phone Validation Date</label>
    <type>DateTime</type>
</CustomField>